Update footer copyright text to remove group name

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             class="border-t border-gray-200 dark:border-gray-800 pt-8 text-center"
           >
             <p class="text-slate-400 text-sm">
-              © 2024 TrustWe. All rights reserved. Kelompok P.
+              © 2024 TrustWe. All rights reserved. Kelompok .
             </p>
           </div>
         </div>
