--- a/pages/report.html
+++ b/pages/report.html
@@ -14,6 +14,11 @@
       rel="stylesheet"
     />
     <link
+      rel="icon"
+      type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='6' y='14' width='52' height='36' rx='6' fill='%230F766E'/%3E%3Crect x='10' y='18' width='44' height='28' rx='4' fill='%2314B8A6'/%3E%3Ccircle cx='32' cy='32' r='8' fill='%230F766E'/%3E%3Ctext x='32' y='37' text-anchor='middle' font-size='14' fill='white' font-weight='700'%3E%24%3C/text%3E%3C/svg%3E"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
       rel="stylesheet"
     />
