--- a/pages/report.html
+++ b/pages/report.html
@@ -111,32 +111,43 @@
               href="report.html"
               >Report</a
             >
+            
+            <a
+                class="text-slate-600 dark:text-slate-300 hover:text-primary dark:hover:text-white text-sm font-medium transition-colors"
+                href="team.html"
+                >Our Team</a
+            >
           </div>
         </div>
 
         <!-- Mobile Menu Icon -->
-        <div class="md:hidden flex items-center">
-          <button
-            onclick="document.getElementById('mobileMenu').classList.toggle('hidden')"
-            class="text-slate-600 dark:text-slate-300"
-          >
-            <span class="material-symbols-outlined">menu</span>
-          </button>
+            <div class="md:hidden flex items-center">
+              <button
+                id="hamburgerBtn"
+                class="relative z-50 flex flex-col gap-1.5 p-2"
+              >
+                <span class="block h-0.5 w-6 bg-slate-700 dark:bg-white transition"></span>
+                <span class="block h-0.5 w-6 bg-slate-700 dark:bg-white transition"></span>
+                <span class="block h-0.5 w-6 bg-slate-700 dark:bg-white transition"></span>
+              </button>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <!-- Mobile Menu -->
-    <div
-      id="mobileMenu"
-      class="hidden md:hidden flex-col gap-4 px-6 py-4 bg-white dark:bg-slate-900 border-t border-gray-200 dark:border-gray-800"
-    >
-      <a href="../index.html">Home</a>
-      <a href="dashboard.html">Dashboard</a>
-      <a href="transaksi.html">Transaksi</a>
-      <a href="budgetin.html">Budgetin</a>
-      <a href="report.html">Report</a>
-    </div>
+        <!-- Mobile Menu -->
+        <div
+          id="mobileMenu"
+          class="fixed top-16 right-4 w-56 rounded-xl bg-white dark:bg-slate-900 shadow-xl border border-gray-200 dark:border-gray-800
+                opacity-0 scale-95 pointer-events-none transition-all duration-200"
+        >
+          <div class="flex flex-col gap-2 p-4">
+            <a class="mobile-link" href="../index.html">Home</a>
+            <a class="mobile-link" href="dashboard.html">Dashboard</a>
+            <a class="mobile-link" href="transaksi.html">Transaksi</a>
+            <a class="mobile-link" href="budgetin.html">Budgetin</a>
+            <a class="mobile-link" href="report.html">Report</a>
+          </div>
+        </div>
   </nav>
 
   <!-- Main Content -->
@@ -729,6 +740,26 @@
       </div>
     </div>
   </body>
+    <script>
+    const hamburger = document.getElementById("hamburgerBtn");
+    const mobileMenu = document.getElementById("mobileMenu");
+
+    hamburger.addEventListener("click", () => {
+      mobileMenu.classList.toggle("opacity-0");
+      mobileMenu.classList.toggle("scale-95");
+      mobileMenu.classList.toggle("pointer-events-none");
+
+      hamburger.classList.toggle("active");
+    });
+
+    // Close menu when clicking outside
+    document.addEventListener("click", (e) => {
+      if (!hamburger.contains(e.target) && !mobileMenu.contains(e.target)) {
+        mobileMenu.classList.add("opacity-0", "scale-95", "pointer-events-none");
+      }
+    });
+  </script>
+
   <script src="../assets/app.js"></script>
   <script src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
 </html>
