--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               </div>
               <h2
                 class="text-primary dark:text-white text-xl font-bold tracking-tight"
-              >
+              href="index.html">
                 TrustWe
               </h2>
             </div>
