--- a/pages/budgetin.html
+++ b/pages/budgetin.html
@@ -97,7 +97,7 @@
           </div>
           <h2
             class="text-primary dark:text-white text-xl font-bold tracking-tight"
-          >
+          href="../index.html">
             TrustWe
           </h2>
         </div>
