--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -129,7 +129,7 @@
             </div>
             <h2
               class="text-primary dark:text-white text-xl font-bold tracking-tight"
-            >
+            href="../index.html">
               TrustWe
             </h2>
           </div>
