--- a/pages/report.html
+++ b/pages/report.html
@@ -74,7 +74,7 @@
           </div>
           <h2
             class="text-primary dark:text-white text-xl font-bold tracking-tight"
-          >
+          href="../index.html">
             TrustWe
           </h2>
         </div>
