--- a/pages/team.html
+++ b/pages/team.html
@@ -74,7 +74,7 @@
               </div>
               <h2
                 class="text-primary dark:text-white text-xl font-bold tracking-tight"
-              >
+              href="../index.html">
                 TrustWe
               </h2>
             </div>
@@ -320,5 +320,24 @@
     </div>
 
 </body>
+<script>
+    const hamburger = document.getElementById("hamburgerBtn");
+    const mobileMenu = document.getElementById("mobileMenu");
+
+    hamburger.addEventListener("click", () => {
+      mobileMenu.classList.toggle("opacity-0");
+      mobileMenu.classList.toggle("scale-95");
+      mobileMenu.classList.toggle("pointer-events-none");
+
+      hamburger.classList.toggle("active");
+    });
+
+    // Close menu when clicking outside
+    document.addEventListener("click", (e) => {
+      if (!hamburger.contains(e.target) && !mobileMenu.contains(e.target)) {
+        mobileMenu.classList.add("opacity-0", "scale-95", "pointer-events-none");
+      }
+    });
+  </script>
 
 </html>
