--- a/pages/transaksi.html
+++ b/pages/transaksi.html
@@ -81,7 +81,7 @@
           </div>
           <h2
             class="text-primary dark:text-white text-xl font-bold tracking-tight"
-          >
+          href="../index.html">
             TrustWe
           </h2>
         </div>
