--- a/pages/team.html
+++ b/pages/team.html
@@ -330,13 +330,6 @@
                     </p>
 
                     <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                        <a href="https://wa.me/62895604849987" class="w-full sm:w-auto">
-                            <button class="w-full sm:w-auto flex items-center justify-center px-6 sm:px-8 py-3
-                           bg-transparent border border-white text-white
-                           hover:bg-white/10 font-bold rounded-lg transition-colors">
-                                Hubungi HR
-                            </button>
-                        </a>
                     </div>
                 </div>
             </section>
@@ -345,58 +338,78 @@
 
         </main>
         <!-- Footer -->
-        <footer class="w-full bg-slate-50 dark:bg-slate-950 border-t border-gray-200 dark:border-gray-800 pt-16 pb-8">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col gap-10">
-                <div class="flex flex-col md:flex-row justify-between items-center gap-8">
-                    <!-- Brand -->
-                    <div class="flex items-center gap-2">
-                        <div class="size-6 text-slate-400">
-                            <span class="material-symbols-outlined">
-                                account_balance_wallet
-                            </span>
-                        </div>
-                        <span class="text-slate-700 dark:text-slate-300 text-lg font-bold">
-                            TrustWe
-                        </span>
-                    </div>
+        <!-- CONTACT FORM + FOOTER -->
+        <section id="contact" class="bg-slate-900 text-white">
 
-                    <!-- Links -->
-                    <div class="flex flex-wrap justify-center gap-8">
-                        <a class="text-slate-500 hover:text-primary dark:hover:text-white text-sm font-medium transition-colors"
-                            href="#">
-                            Kebijakan Privasi
-                        </a>
-                        <a class="text-slate-500 hover:text-primary dark:hover:text-white text-sm font-medium transition-colors"
-                            href="#">
-                            Syarat & Ketentuan
-                        </a>
-                        <a class="text-slate-500 hover:text-primary dark:hover:text-white text-sm font-medium transition-colors"
-                            href="#">
-                            Bantuan
-                        </a>
-                    </div>
-
-                    <!-- Socials -->
-                    <div class="flex gap-4">
-                        <a class="text-slate-400 hover:text-primary dark:hover:text-white transition-colors" href="#">
-                            <span class="material-symbols-outlined">share</span>
-                        </a>
-                        <a class="text-slate-400 hover:text-primary dark:hover:text-white transition-colors" href="#">
-                            <span class="material-symbols-outlined">work</span>
-                        </a>
-                        <a class="text-slate-400 hover:text-primary dark:hover:text-white transition-colors" href="#">
-                            <span class="material-symbols-outlined">groups</span>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="border-t border-gray-200 dark:border-gray-800 pt-8 text-center">
-                    <p class="text-slate-400 text-sm">
-                        © 2024 TrustWe. Seluruh hak cipta dilindungi. Kelompok P. Alhamdulillah.
+            <!-- Contact Form -->
+            <div class="max-w-4xl mx-auto px-6 py-20">
+                <div class="text-center mb-12">
+                    <h2 class="text-3xl font-bold mb-3">Hubungi Kami</h2>
+                    <p class="text-slate-400 max-w-xl mx-auto">
+                        Punya pertanyaan, ide, atau ingin bekerja sama dengan TrustWe?
+                        Silakan kirim pesan melalui form di bawah ini.
                     </p>
                 </div>
+
+                <form action="/sendmail.php" method="POST">
+                    <!-- Nama -->
+                    <div>
+                        <label class="block text-sm font-medium mb-2">Nama Lengkap</label>
+                        <input type="text" name="Nama" required placeholder="Masukkan nama Anda"
+                            class="w-full rounded-lg bg-slate-800 border border-slate-700 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-primary" />
+                    </div>
+
+                    <!-- Subject -->
+                    <div>
+                        <label class="block text-sm font-medium mb-2">Subjek</label>
+                        <input type="text" name="Subjek" required placeholder="Judul pesan"
+                            class="w-full rounded-lg bg-slate-800 border border-slate-700 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-primary" />
+                    </div>
+
+                    <!-- Pesan -->
+                    <div>
+                        <label class="block text-sm font-medium mb-2">Pesan</label>
+                        <textarea name="Pesan" rows="5" required placeholder="Tulis pesan Anda di sini..."
+                            class="w-full rounded-lg bg-slate-800 border border-slate-700 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
+                    </div>
+
+                    <!-- Buttons -->
+                    <div class="flex flex-col sm:flex-row gap-4 justify-center pt-4">
+                        <button type="submit"
+                            class="px-8 py-3 bg-primary hover:bg-primary/90 rounded-lg font-bold transition">
+                            Kirim Email
+                        </button>
+
+                        <a href="https://wa.me/62895604849987?text=Halo%20Tim%20TrustWe,%20saya%20ingin%20bertanya"
+                            target="_blank"
+                            class="px-8 py-3 border border-white/30 hover:bg-white/10 rounded-lg font-bold transition text-center">
+                            Chat via WhatsApp
+                        </a>
+                    </div>
+                </form>
             </div>
-        </footer>
+
+            <!-- Footer -->
+            <footer class="border-t border-slate-800">
+                <div class="max-w-7xl mx-auto px-6 py-8 flex flex-col md:flex-row items-center justify-between gap-4">
+                    <p class="text-slate-500 text-sm">
+                        © 2026 TrustWe. Seluruh hak cipta dilindungi.
+                    </p>
+
+                    <div class="flex gap-4">
+                        <a href="mailto:trustwe.team@gmail.com" class="text-slate-400 hover:text-primary transition">
+                            <span class="material-symbols-outlined">mail</span>
+                        </a>
+                        <a href="https://wa.me/62895604849987?text=Halo%20Tim%20TrustWe" target="_blank"
+                            class="text-slate-400 hover:text-primary transition">
+                            <span class="material-symbols-outlined">chat</span>
+                        </a>
+                    </div>
+                </div>
+            </footer>
+
+        </section>
+
     </div>
 
 </body>
