Update contact form action to use server-side processing

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           </p>
         </div>
 
-        <form action="mailto:trustwe.team@gmail.com" method="POST" enctype="text/plain" class="space-y-6">
+        <form action="/sendmail.php" method="POST">
           <!-- Nama -->
           <div>
             <label class="block text-sm font-medium mb-2">Nama Lengkap</label>
