Update email link to use a formatted Gmail URL in index.html and team.html

--- a/pages/team.html
+++ b/pages/team.html
@@ -397,9 +397,11 @@
                     </p>
 
                     <div class="flex gap-4">
-                        <a href="mailto:trustwe.team@gmail.com" class="text-slate-400 hover:text-primary transition">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=admin@trustwe.my.id&su=Kontak%20TrustWe&body=Halo%20Admin%20TrustWe,%0A%0ASaya%20ingin%20bertanya%20tentang%20layanan%20TrustWe.%0A%0ATerima%20kasih."
+                            target="_blank" class="text-slate-400 hover:text-primary transition">
                             <span class="material-symbols-outlined">mail</span>
                         </a>
+
                         <a href="https://wa.me/62895604849987?text=Halo%20Tim%20TrustWe" target="_blank"
                             class="text-slate-400 hover:text-primary transition">
                             <span class="material-symbols-outlined">chat</span>
